# CTP-Test

./: .gitignore
Test/: CMakeLists.txt  README.md  build.sh  config.json  main.cpp  run.sh
